--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "yidas/yii2-fontawesome": "~2.0.0",
+        "mervick/yii2-material-design-icons": "~1.0"
     },
     "autoload": {
         "psr-4": {
