--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.0",
+        "yiisoft/yii2-bootstrap": "~2.0.0",
         "yidas/yii2-fontawesome": "~2.0.0",
         "mervick/yii2-material-design-icons": "~1.0"
     },
