--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ricar2ce/yii2-material-template",
+    "name": "ricar2ce/yii2-material-theme",
     "description": "Material Theme for Yii2",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","material","theme","template","creative"],
+    "keywords": ["yii2","extension","material","theme","creative"],
     "license": "MIT",
     "authors": [
         {
